# lakes

./: CMakeLists.txt  cmake_config.h.in  main.c  project_config.h
include/: debug.h  dfa.h  globals.h  macro.h  nfa.h
lib/: dfa.c  input.c  macro.c  nfa.c  nfa_interpreter.c  tokmap_generator.c  writeout.c
tests/: demo.lex  demo2.lex  dfatest.c  interpretertest.c  lex.parts.c  macrotest.c  maintest.c  misc.c  nfatest.c
