cmake_minimum_required(VERSION 3.0)
project(lakes VERSION 0.1 LANGUAGES C)
add_executable(testmacro tests/macrotest.c lib/macro.c include/macro.h)
add_executable(testmain tests/maintest.c lib/macro.c include/macro.h main.c)
target_include_directories(testmacro PUBLIC include "${CMAKE_INSTALL_PREFIX}/include")
target_include_directories(testmain PUBLIC include "${CMAKE_INSTALL_PREFIX}/include")
target_link_directories(testmacro PUBLIC "${CMAKE_INSTALL_PREFIX}/lib")
target_link_directories(testmain PUBLIC "${CMAKE_INSTALL_PREFIX}/lib")
target_link_libraries(testmacro PUBLIC map)
target_link_libraries(testmain PUBLIC map)
enable_testing()
add_test(NAME macrotest COMMAND testmacro)
add_test(NAME maintest COMMAND testmain)
target_compile_definitions(testmacro PUBLIC DEBUG)
target_compile_definitions(testmain PUBLIC DEBUG)
configure_file(cmake_config.h.in ../project_config.h)